--- a/public/assets/undangan/css/styles.css
+++ b/public/assets/undangan/css/styles.css
@@ -668,6 +668,7 @@ textarea {
     justify-content : center;
 }
 
+
 /* --------------------------------------------------------------------
  * ## large screen devices
  * -------------------------------------------------------------------- */
@@ -2792,7 +2793,7 @@ img.u-pull-left {
  * ## theme-specific typography classes
  * ------------------------------------------------------------------- */
 .text-pretitle {
-    font-family   : var(--font-2);
+    font-family : 'Comfortaa',sans-serif;
     font-size     : var(--text-sm);
     font-weight   : 300;
     margin-top    : 0;
@@ -2816,8 +2817,8 @@ img.u-pull-left {
 .text-huge-title {
     --text-huge       : 11.2rem;
     --text-multiplier : 1;
-    font-family       : var(--font-3);
-    font-weight       : 400;
+    font-family : 'Allura', serif;
+    font-weight       : 500;
     font-size         : calc(var(--text-huge) * var(--text-multiplier));
     line-height       : 1.036;
     margin-top        : 0;
@@ -2826,19 +2827,28 @@ img.u-pull-left {
 .name-bride {
     --text-huge       : 11.2rem;
     --text-multiplier : 1;
-    font-family       : var(--font-3);
-    font-weight       : 400;
+    font-family       : 'Allura', serif;
+    font-weight       : 500;
     font-size         : var(--text-xxl);
     line-height       : 1.036;
     margin-top        : 0;
+    color             : #B70B9D;
 }
 
 .desc-bride {
-    font-family : var(--font-2);
+    font-family : 'Comfortaa',sans-serif;
     font-weight : 300;
     font-size   : var(--text-sm);
     line-height : calc(1.25 * var(--space));
     color       : var(--color-text-dark);
+}
+
+.parent-bride {
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 500;
+    font-size: var(--text-sm);
+    line-height: calc(1.25 * var(--space));
+    color: var(--color-text-dark);
 }
 
 .desc {
@@ -2847,6 +2857,8 @@ img.u-pull-left {
     font-size   : var(--text-sm);
     color       : var(--color-text-dark);
 }
+
+
 
 /* -------------------------------------------------------------------
  * responsive:
@@ -3186,7 +3198,8 @@ img.u-pull-left {
 }
 
 .s-intro__content-bottom-block {
-    margin-right : calc(var(--gutter) * 4);
+    margin-left : calc(var(--gutter) * 3);
+
 }
 
 .s-intro__content-bottom-block:last-child {
@@ -3205,28 +3218,59 @@ img.u-pull-left {
  * ## intro counter
  * -------------------------------------------------------------------- */
 .s-intro .counter {
-    display     : flex;
-    font-family : var(--font-2);
-    font-weight : 300;
-    font-size   : calc(var(--text-size) * 1.3);
-    line-height : var(--vspace-1_25);
-    color       : white;
+    display: flex;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: calc(var(--text-size) * 1.3);
+    line-height: var(--vspace-1_25);
+    color: white;
+    margin-bottom: 1.5rem;
+    /* Memberikan jarak antara countdown dan button */
 }
 
 .s-intro .counter__time {
-    margin-right : .8rem;
-    display      : flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 1.5rem;
 }
 
-.s-intro .counter__time span:last-child {
-    font-size   : var(--text-xs);
-    font-weight : 300;
-    color       : rgba(255, 255, 255, 0.3);
-    margin-left : .4rem;
+.s-intro .counter__number {
+    font-size: 40px;
+    font-weight: 500;
+    /* Medium font weight */
+    color: white;
+}
+
+.s-intro .counter__label {
+    font-size: var(--text-xs);
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.3);
+    margin-top: 0.5rem;
 }
 
 .s-intro .counter__time:last-child {
-    margin-right : 0;
+    margin-right: 0;
+}
+
+/* Styling untuk button Save the Date */
+.save-the-date-button {
+    background-color: white;
+    border: 2px solid white;
+    border-radius: 60px;
+    color: black;
+    padding: 1px 20px;
+    font-family: 'Comfortaa', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.save-the-date-button:hover,
+.save-the-date-button:focus {
+    background-color: white;
+    color: black;
+    border-color: white;
 }
 
 /* --------------------------------------------------------------------
@@ -3276,6 +3320,64 @@ img.u-pull-left {
 .s-intro__notify button.btn--stroke:hover {
     border : 1px solid transparent;
 }
+
+.couple-section {
+    position: relative;
+    z-index: 1;
+}
+
+.ornaments-wrapper {
+    position: absolute;
+    top: 10rem;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    z-index: 1;
+}
+
+.orn-1 {
+    position: absolute;
+    top: 2rem;
+    left: 0;
+    width: 55%;
+    transform: translate(-26%, 0);
+    z-index: 1;
+}
+
+.orn-2 {
+    position: absolute;
+    top: 89rem;
+    right: 6rem;
+    /* Mirror of left position */
+    transform: translate(50%, -50%) scaleX(-1);
+    /* Flip horizontally */
+    z-index: 1;
+}
+
+.bride-content {
+    position: relative;
+    z-index: 2;
+    /* Di atas bunga */
+}
+
+.bride-photo {
+    position: relative;
+    z-index: 3;
+    background: white;
+    /* Untuk memastikan transparansi tidak menampilkan bunga */
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    /* Memberikan depth */
+}
+
+.wiper-image {
+    z-index: 1;
+    opacity: 0.8;
+    /* Sesuaikan sesuai kebutuhan */
+}
+
+
+
 
 /* -------------------------------------------------------------------
  * ## modal
@@ -3624,7 +3726,7 @@ img.u-pull-left {
     }
 
     .s-intro__content-bottom-block:last-child {
-        display : none;
+        margin-right : 0;
     }
 }
 
@@ -3702,8 +3804,8 @@ img.u-pull-left {
  * ## tabs
  * -------------------------------------------------------------------- */
 .tab-nav {
-    font-family    : var(--font-2);
-    font-weight    : 600;
+    font-family    : 'comfortaa', sans-serif;
+    font-weight    : 500;
     font-size      : calc(var(--text-size) * 0.6);
     text-transform : uppercase;
     letter-spacing : .35em;
@@ -3735,7 +3837,7 @@ img.u-pull-left {
 .tab-nav__list li::before {
     content          : "";
     display          : block;
-    background-color : var(--color-1);
+    background-color : #E382D3;
     border-radius    : var(--border-radius) var(--border-radius) 0 0;
     width            : 100%;
     height           : 100%;
@@ -3758,7 +3860,7 @@ img.u-pull-left {
 }
 
 .tab-nav__list a[data-tab-active] {
-    color       : var(--color-3-light);
+    color       : #FFFFFF;
     font-weight : 400;
     outline     : 0;
 }
@@ -3814,6 +3916,71 @@ img.u-pull-left {
     color             : var(--color-2-darker);
     counter-increment : ctr;
 }
+
+.btn-pink {
+    background: #ff3190;
+    color: rgba(255, 255, 255, 0.4);
+}
+
+.btn-control {
+    border-radius: 50%;
+    height: 3.3em;
+    width: 3.3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(rgba(255, 0, 128, 0.8) 60%, rgba(255, 255, 255, 1) 62%) !important;
+    position: relative;
+    margin: 100px auto;
+    box-shadow: 0px 0px 25px 3px rgba(255, 0, 128, 0.8);
+    font-size: 1.5em;
+    color: #fff;
+    text-align: center;
+    line-height: 2.5em;
+    overflow: hidden;
+    transition: transform 0.3s ease,
+    box-shadow 0.3s ease;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255, 0, 128, 0.7);
+    }
+
+    70% {
+        transform: scale(1.1);
+        box-shadow: 0 0 0 10px rgba(255, 0, 128, 0);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255, 0, 128, 0);
+    }
+}
+
+.btn-control.pulse {
+    animation: pulse 1.5s infinite;
+}
+
+
+.p-0 {
+    padding: 0 !important;
+}
+
+.m-4 {
+    margin: 1.5rem !important;
+}
+
+.position-fixed {
+    position: fixed !important;
+}
+
+.d-flex {
+    display: -ms-flexbox !important;
+    display: flex !important;
+}
+
 
 .services-list__item {
     margin-bottom : var(--vspace-0_5);
